Add swagger docs for house route and clean up old swagger
